--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "uikit": "^3.0.0-rc.17"
   },
   "scripts": {
